find user by name and password basic login function
