# docs/swagger.json
@@ -34,13 +34,13 @@
                     },
                     {
                         "type": "string",
-                        "description": "passWord",
+                        "description": "password",
                         "name": "password",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "repassWord",
+                        "description": "repassword",
                         "name": "repassword",
                         "in": "query"
                     }
@@ -66,6 +66,36 @@
                         "type": "string",
                         "description": "id",
                         "name": "id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\", \"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/findUserByNameAndPwd": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "User log in",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "userName",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "password",
+                        "name": "password",
                         "in": "query"
                     }
                 ],
