# service/userservice.go
@@ -28,8 +28,8 @@ func GetUserList(c *gin.Context) {
 // @Summary create user
 // @Tags User
 // @param name query string false "userName"
-// @param password query string false "passWord"
-// @param repassword query string false "repassWord"
+// @param password query string false "password"
+// @param repassword query string false "repassword"
 // @Success 200 {string} json{"code", "message"}
 // @Router /user/createUser [get]
 func CreateUser(c *gin.Context) {
@@ -62,6 +62,42 @@ func CreateUser(c *gin.Context) {
 		"message": "create user success",
 	})
 
+}
+
+// FindUserByNameAndPwd
+// @Summary User log in
+// @Tags User
+// @param name query string false "userName"
+// @param password query string false "password"
+// @Success 200 {string} json{"code", "message"}
+// @Router /user/findUserByNameAndPwd [post]
+func FindUserByNameAndPwd(c *gin.Context) {
+	data := models.UserBasic{}
+
+	name := c.Query("name")
+	password := c.Query("password")
+	user := models.FindUserByName(name)
+	if user.Name == "" {
+		c.JSON(200, gin.H{
+			"message": "User not exist",
+		})
+		return
+	}
+
+	flag := utils.ValidPassword(password, user.Salt, user.Password)
+	if !flag {
+		c.JSON(200, gin.H{
+			"message": "Password not match",
+		})
+		return
+	}
+	pwd := utils.MakePassword(password, user.Salt)
+
+	data = models.FindUserByNameAndPwd(name, pwd)
+
+	c.JSON(200, gin.H{
+		"message": data,
+	})
 }
 
 // DeleteUser
